--- a/app/scripts/views/yhteinen/tunnuslukujenSyottaminen-me.html
+++ b/app/scripts/views/yhteinen/tunnuslukujenSyottaminen-me.html
@@ -3,9 +3,12 @@
     <h2>Markkinaehtoinen liikenne</h2>
   </juku-form-row>
   <juku-form-row>
-    <h3>Markkinaehtoisen liikenteen tarjonta</h3>
+    <juku-tunnusluvut-liikenteen-kysynta-tarjonta tyyppi="ME"></juku-tunnusluvut-liikenteen-kysynta-tarjonta>
   </juku-form-row>
   <juku-form-row>
     <juku-tunnusluvut-tarjonta tyyppi="ME"></juku-tunnusluvut-tarjonta>
+  </juku-form-row>
+  <juku-form-row>
+    <juku-tunnusluvut-lisatiedot lisatiedot="taustatiedot.lisatiedot"></juku-tunnusluvut-lisatiedot>
   </juku-form-row>
 </div>
