--- a/app/scripts/views/yhteinen/tunnuslukujenSyottaminen-sl.html
+++ b/app/scripts/views/yhteinen/tunnuslukujenSyottaminen-sl.html
@@ -3,15 +3,12 @@
     <h2>Siirtymäajan liikennöintisopimuksilla liikennöitävä liikenne</h2>
   </juku-form-row>
   <juku-form-row>
-    <h3>Liikenteen kysynnän tunnusluvut</h3>
-  </juku-form-row>
-  <juku-form-row>
-    <juku-tunnusluvut-kysynta tyyppi="SL"></juku-tunnusluvut-kysynta>
-  </juku-form-row>
-  <juku-form-row>
-    <h3>Tarjotun liikenteen tunnusluvut</h3>
+    <juku-tunnusluvut-liikenteen-kysynta-tarjonta tyyppi="SL"></juku-tunnusluvut-liikenteen-kysynta-tarjonta>
   </juku-form-row>
   <juku-form-row>
     <juku-tunnusluvut-tarjonta tyyppi="SL"></juku-tunnusluvut-tarjonta>
+  </juku-form-row>
+  <juku-form-row>
+    <juku-tunnusluvut-lisatiedot lisatiedot="taustatiedot.lisatiedot"></juku-tunnusluvut-lisatiedot>
   </juku-form-row>
 </div>
