LIVIJUKU-648: Tunnuslukunäyttöjen jatkokehitys

--- a/app/scripts/views/yhteinen/tunnuslukujenSyottaminen-sl.html
+++ b/app/scripts/views/yhteinen/tunnuslukujenSyottaminen-sl.html
@@ -6,7 +6,10 @@
     <juku-tunnusluvut-liikenteen-kysynta-tarjonta tyyppi="SL"></juku-tunnusluvut-liikenteen-kysynta-tarjonta>
   </juku-form-row>
   <juku-form-row>
-    <juku-tunnusluvut-tarjonta tyyppi="SL"></juku-tunnusluvut-tarjonta>
+    <juku-tunnusluvut-liikennointikorvaukset tyyppi="SL"></juku-tunnusluvut-liikennointikorvaukset>
+  </juku-form-row>
+  <juku-form-row>
+    <juku-tunnusluvut-lipputulot tyyppi="SL"></juku-tunnusluvut-lipputulot>
   </juku-form-row>
   <juku-form-row>
     <juku-tunnusluvut-lisatiedot lisatiedot="taustatiedot.lisatiedot"></juku-tunnusluvut-lisatiedot>
