--- a/app/scripts/views/yhteinen/tunnuslukujenSyottaminen-psak.html
+++ b/app/scripts/views/yhteinen/tunnuslukujenSyottaminen-psak.html
@@ -6,7 +6,16 @@
     <juku-tunnusluvut-liikenteen-kysynta-tarjonta tyyppi="PSAK"></juku-tunnusluvut-liikenteen-kysynta-tarjonta>
   </juku-form-row>
   <juku-form-row>
-    <juku-tunnusluvut-tarjonta tyyppi="PSAK"></juku-tunnusluvut-tarjonta>
+    <juku-tunnusluvut-kalusto></juku-tunnusluvut-kalusto>
+  </juku-form-row>
+  <juku-form-row>
+    <juku-tunnusluvut-liikennointikorvaukset tyyppi="PSAK"></juku-tunnusluvut-liikennointikorvaukset>
+  </juku-form-row>
+  <juku-form-row>
+    <juku-tunnusluvut-lipputulot tyyppi="PSAK"></juku-tunnusluvut-lipputulot>
+  </juku-form-row>
+  <juku-form-row>
+    <juku-tunnusluvut-tarjouskilpailut tyyppi="PSAK"></juku-tunnusluvut-tarjouskilpailut>
   </juku-form-row>
   <juku-form-row>
     <juku-tunnusluvut-lisatiedot lisatiedot="taustatiedot.lisatiedot"></juku-tunnusluvut-lisatiedot>
