--- a/app/scripts/views/yhteinen/tunnuslukujenSyottaminen.html
+++ b/app/scripts/views/yhteinen/tunnuslukujenSyottaminen.html
@@ -22,6 +22,10 @@
           <option value="2015">2015</option>
         </select>
       </div>
+      <div class="col-md-6">
+        <small><em>Koko vuoden tunnuslukujen täyttöaste:</em></small>
+        <uib-progressbar animate="false" value="vuositayttoaste" type="success"><b>{{vuositayttoaste}}%</b></uib-progressbar>
+      </div>
     </juku-form-row>
   </ng-form>
   <juku-navigation>
