--- a/app/scripts/views/yhteinen/tunnuslukujenSyottaminen-psab.html
+++ b/app/scripts/views/yhteinen/tunnuslukujenSyottaminen-psab.html
@@ -3,6 +3,11 @@
     <h2>PSA bruttosopimusliikenteen tunnusluvut</h2>
   </juku-form-row>
   <juku-form-row>
+    <small><em>Tämän välilehden tietojen täyttöaste:</em></small>
+    <uib-progressbar animate="false" value="vuositayttoaste" type="success"><b>{{vuositayttoaste}}%</b>
+    </uib-progressbar>
+  </juku-form-row>
+  <juku-form-row>
     <juku-tunnusluvut-liikenteen-kysynta-tarjonta tyyppi="PSAB"></juku-tunnusluvut-liikenteen-kysynta-tarjonta>
   </juku-form-row>
   <juku-form-row>
