--- a/app/scripts/views/yhteinen/tunnuslukujenSyottaminen-sl.html
+++ b/app/scripts/views/yhteinen/tunnuslukujenSyottaminen-sl.html
@@ -3,6 +3,11 @@
     <h2>Siirtymäajan liikennöintisopimuksilla liikennöitävä liikenne</h2>
   </juku-form-row>
   <juku-form-row>
+    <small><em>Tämän välilehden tietojen täyttöaste:</em></small>
+    <uib-progressbar animate="false" value="vuositayttoaste" type="success"><b>{{vuositayttoaste}}%</b>
+    </uib-progressbar>
+  </juku-form-row>
+  <juku-form-row>
     <juku-tunnusluvut-liikenteen-kysynta-tarjonta tyyppi="SL"></juku-tunnusluvut-liikenteen-kysynta-tarjonta>
   </juku-form-row>
   <juku-form-row>
