--- a/app/scripts/views/yhteinen/tunnuslukujenSyottaminen-ttyt.html
+++ b/app/scripts/views/yhteinen/tunnuslukujenSyottaminen-ttyt.html
@@ -4,6 +4,11 @@
       <h2>Alueen taustatiedot ja yleiset tunnusluvut</h2>
     </juku-form-row>
     <juku-form-row>
+      <small><em>Tämän välilehden tietojen täyttöaste:</em></small>
+      <uib-progressbar animate="false" value="vuositayttoaste" type="success"><b>{{vuositayttoaste}}%</b>
+      </uib-progressbar>
+    </juku-form-row>
+    <juku-form-row>
       <h3>Alueen taustatiedot</h3>
       <div class="row">
         <div class="col-md-6">
