LIVIJUKU-663: ELY-hakija saa hämäävän näytön, jos yhtään hakemuskautta ei ole auki + näytön refaktorointi

--- a/app/scripts/views/yhteinen/hakemukset.html
+++ b/app/scripts/views/yhteinen/hakemukset.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div ng-show="hakemukset.hakemuskaudet.length === 0">
+  <div ng-show="hakemukset.hakemukset.length === 0">
     <p>Ei hakemuksia, koska hakemuskautta ei ole vielä avattu.</p>
   </div>
 
