--- a/app/scripts/components/tunnusluvut/liikenteenKysyntaTarjonta/index.html
+++ b/app/scripts/components/tunnusluvut/liikenteenKysyntaTarjonta/index.html
@@ -55,18 +55,20 @@
     <p>Kuukausikohtainen kysyntä ja tarjonta.</p>
     <div class="table-responsive">
       <table class="table table-hover table-condensed">
-        <tr>
-          <th class="col-md-3">Kuukausi</th>
-          <th class="col-md-3">Nousua/kk</th>
-          <th class="col-md-3">Linjakilometrit<br>(linja-km/kk)</th>
-          <th class="col-md-3">Vuorotarjonta<br>(lähtöä/kk)</th>
-        </tr>
+        <thead>
+          <tr>
+            <th class="col-md-3">Kuukausi</th>
+            <th class="col-md-3">Nousua/kk</th>
+            <th class="col-md-3">Linjakilometrit<br>(linja-km/kk)</th>
+            <th class="col-md-3">Vuorotarjonta<br>(lähtöä/kk)</th>
+          </tr>
         </thead>
         <tfoot ng-if="tunnusluvut.length > 0">
-          <td><span class="yhteensa">Yhteensä:</span></td>
-          <td>{{nousuaSumma() | currency : '' : 0}} nousua / vuosi</td>
-          <td>{{linjakilometritSumma() | currency : '' : 0}} linja-km / vuosi</td>
-          <td>{{vuorotarjontaSumma() | currency : '' : 0}} lähtö / vuosi</td>
+          <tr>
+            <td><span class="yhteensa">Yhteensä:</span></td>
+            <td>{{nousuaSumma() | currency : '' : 0}} nousua / vuosi</td>
+            <td>{{linjakilometritSumma() | currency : '' : 0}} linja-km / vuosi</td>
+            <td>{{vuorotarjontaSumma() | currency : '' : 0}} lähtö / vuosi</td>
           </tr>
         </tfoot>
         <tbody>
