--- a/app/scripts/views/hakemus/index.html
+++ b/app/scripts/views/hakemus/index.html
@@ -66,7 +66,7 @@
       </juku-form-row>
       <juku-form-row>
         <h5>Hakemuksen tila</h5>
-        <hakemuksen-tila tila="{{hakemus.hakemustilatunnus}}" tyyppi="{{hakemus.hakemustyyppitunnus}}"/>
+        <hakemuksen-tila tila="{{hakemus.hakemustilatunnus}}"/>
       </juku-form-row>
       <juku-form-row ng-hide="hakemusKeskenerainen()">
         <h5>Käsittelijä</h5>
